@startuml

skinparam classAttributeIconSize 0
skinparam genericDisplay old

title Diagrama de classes JPEG

package Persistencia {
    class IO
    class PpmImage
}

package Domini {
    class JPEG
    interface Codec<A,B> {
        B encode(A)
        A decode(B)
    }
    class JPEGBlock as "JPEGBlock <? implements Codec<byte[][], short[]> >" {
        -JPEGBlock()
        {static}+short[] encode(final short quality, final boolean isChrominance, final byte[][] data)
        {static}+byte[][] decode(final short quality, final boolean isChrominance, final short[] data)
    }
    class DCT {
        {static}+double[][] encode(final byte[][] data)
        {static}+byte[][] decode(final double[][] data)
    }
    class Quantization {
        {static}-LuminanceTable : byte[][]
        {static}-ChrominanceTable : byte[][]
        {static}~double quantizationValue(final short quality, final boolean isChrominance, final short x, final short y)
        {static}+short[][] encode(final double[][] data)
        {static}+encode(final short quality, final boolean isChrominance, final double[][] block)
        {static}+double[][] decode(final short[][] data)
        {static}+double[][] decode(final short quality, final boolean isChrominance, final short[][] block)
    }
    class ZigZag {
        {static}-table : byte[][]
        {static}-void calculateCorrespondenceTable()
        {static}+short[] encode(final short[][] block)
        {static}+short[][] decode(final short[] L)
    }
    class RLE {
        {static}+short[] encode(final short[] data)
        {static}+short[] decode(final short[] data)
    }
    class Huffman {
        - root : Node
        - table : HashMap<Short, BitSetL>
        +Huffman(isAC,isChrominance)
        -readTable(filename)
        -addToTree(value,bs)
        +encode(value)
        +decode(b)
        +decode(n,b)
    }
    class Node {
        ~ value : Short
        ~ leaf : boolean
        ~ L : Node
        ~ R : Node
        +isLeaf()
        +getValue()
    }
    class HuffmanLookupException {
        {static} -serialVersionUID : long
        ~ HuffmanLookupException()
        ~ HuffmanLookupException(s)
        ~ HuffmanLookupException(n)
    }

    JPEG *-- JPEGBlock
    JPEG o-- PpmImage
    JPEG o-- Huffman
    JPEG ..> IO
    Huffman ..> IO

    JPEG ..> BitSetL
    Huffman ..> BitSetL

    JPEGBlock *-- DCT
    JPEGBlock *-- Quantization
    JPEGBlock *-- ZigZag
    JPEGBlock *-- RLE
    JPEGBlock --|> Codec

    Huffman *-- Node
    Huffman *-- HuffmanLookupException

}

@enduml
